# weeder

./: .gitignore  README.md  cabal.project  weeder.cabal
hie-dependency-graph/: README.md  hie-dependency-graph.cabal
hie-dependency-graph/src/: HieDependencyGraph.hs
src/: HieDependencyGraph.hs  Weeder.hs
src/Weeder/: Compat.hs  Config.hs  Main.hs  Run.hs  Types.hs
src/Weeder/Types/: Flags.hs
test/: Spec.hs
test/Spec/: DeriveGeneric.stdout  GADTClassAcyclic.stdout  GADTClassAcyclic.toml  InstanceTypeclass.toml  ModuleRoot.stdout  ModuleRoot.toml  Modulo2.dhall  Modulo2.hs  OverloadedStringsNoSig.toml  QualifiedDo.toml  RangeEnum.toml  RootClasses.toml  StandaloneDeriving.stdout  StandaloneDeriving.toml  TypeFamilies.stdout  TypeFamilies.toml  Types.stdout  Types.toml  TypesUnused.stdout
test/Spec/GADTClassAcyclic/: GADTClassAcyclic.hs
test/Spec/ModuleRoot/: M.hs
test/Spec/Modulo2/: Modulo2.hs
test/Spec/OverloadedLabels/: OverloadedLabels.hs
test/Spec/OverloadedLists/: OverloadedLists.hs
test/Spec/QualifiedDo/: Foo.hs  QualifiedDo.hs
test/Spec/TypeFamilies/: TypeFamilies.hs
test/Spec/Types/: Types.hs  TypesUnused.hs  Usages.hs
test/Spec/TypesUnused/: TypesUnused.hs
