cabal-version: 3.0
license:       BSD-3-Clause
license-file:  LICENSE
name:          hie-dependency-graph
author:        Ollie Charles <ollie@ocharles.org.uk>
maintainer:    Ollie Charles <ollie@ocharles.org.uk>
build-type:    Simple
version:       0.1.0
copyright:     Neil Mitchell 2017-2020, Oliver Charles 2020-2023
synopsis:      Detect dead code
description:   Find declarations.
homepage:      https://github.com/ocharles/weeder#readme
bug-reports:   https://github.com/ocharles/weeder/issues
category:      Development
extra-doc-files:
    README.md

library
  build-depends:
    , algebraic-graphs     ^>= 0.7
    , base                 ^>= 4.17.0.0 || ^>= 4.18.0.0 || ^>= 4.19.0.0
    , bytestring           ^>= 0.10.9.0 || ^>= 0.11.0.0 || ^>= 0.12.0.2
    , containers           ^>= 0.6.2.1
    , generic-lens         ^>= 2.2.0.0
    , ghc                  ^>= 9.4 || ^>= 9.6 || ^>= 9.8
    , lens                 ^>= 5.1 || ^>= 5.2
    , mtl                  ^>= 2.2.2 || ^>= 2.3
    , optparse-applicative ^>= 0.14.3.0 || ^>= 0.15.1.0 || ^>= 0.16.0.0 || ^>=  0.17 || ^>= 0.18.1.0
    , regex-tdfa           ^>= 1.2.0.0 || ^>= 1.3.1.0
    , text                 ^>= 2.0.1 || ^>= 2.1
    , toml-reader          ^>= 0.2.0.0
    , transformers         ^>= 0.5.6.2 || ^>= 0.6
  hs-source-dirs: src
  exposed-modules:
    HieDependencyGraph
  autogen-modules:
    Paths_hie_dependency_graph
  other-modules:
    Paths_hie_dependency_graph
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  default-language: Haskell2010
